fix navbar menu on mobile

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -81,6 +81,8 @@
   }
 }
 
+/* Language: scss */
+
 .app__navbar-menu {
   width: 35px;
   height: 35px;
@@ -159,12 +161,12 @@
       }
     }
 
-    @media screen and (min-width: 900px) {
+    @media screen and (min-width: 700px) {
       display: none;
     }
   }
 
-  @media screen and (min-width: 900px) {
+  @media screen and (min-width: 700px) {
     display: none;
   }
 }
